--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,3 +1,14 @@
+.backHome { 
+  background-image: url('../images/gray.jpg');
+  height: 100%;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  /* position: fixed; */
+}
+
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
