--- a/client/src/styles/VideogameCard.css
+++ b/client/src/styles/VideogameCard.css
@@ -1,64 +1,74 @@
 .card {
-  border: 1px solid white;
+  border: 3px solid black;
   border-radius: 20px;
-  margin: 10px;
-  height: fit-content;
-  width: 350px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  margin: 20px 1px;
+  height: 480px;
+  width: 320px;
+  /* display: flex;
+  flex-direction: column; */
+  /* justify-content: space-between; */
+  align-items: center;
+  background-color: rgba(0, 128, 0, 0.466);
 }
 
 .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 .cardNameContainer {
-  margin: 5px;
-  line-height: 60px;
-  height: 60px;
+  /* margin: 5px; */
+  line-height: 45px;
+  height: 55px;
   text-align: center;
   overflow-wrap: break-word;
 }
 
 .cardName {
   color: white;
-  font-size: 24px;
+  font-size: 20px;
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
+  font-weight: bold;
 }
 
 .cardImage {
   background-color: rgba(0, 0, 0, 0.242);
-  padding: 15px;
+  padding: 16px;
   border-radius: 20px;
+  width: 290px;
+  height: 290px;
 }
 
-.cardImageContainer {
+/* .cardImageContainer {
   border-radius: 20px;
-}
+  height: 50%;
+  width: 100%;
+} */
 
 .rating {
-  padding: auto;
-  margin: 5px auto auto auto;
+  /* padding: auto; */
+  margin: auto;
   color: white;
   width: fit-content;
-  font-size: 20px;
+  font-size: 18px;
+  height: 30px;
+  text-align: center;
 }
 
 .genreContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  height: 100px;
+  /* align-items: center; */
+  /* height: 60px; */
 }
 
 .genre {
   border-radius: 10px;
   border: 1px solid white;
-  padding: 5px;
-  margin: 5px;
+  padding: 3px;
+  margin: 1px 2px;
   color: white;
+  height: fit-content;
 }
