--- a/client/src/styles/CreateVideogame.css
+++ b/client/src/styles/CreateVideogame.css
@@ -1,5 +1,6 @@
 .createContainer {
-  background-image: url('../images/gray.jpg');
+  /* background-image: url('../images/gray.jpg'); */
+  background-image: url('../images/landing.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,34 +9,46 @@
   min-height: 100vh;
 }
 
-.btnHome {
+.btnHomeCreate {
   color: white;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border: 1px solid white;
   width: fit-content;
+  background-color: rgba(66, 66, 66, 0.94);
 }
 
-.btnHome {
+.btnHomeCreate {
   padding: 5px;
   margin: 5px;
   font-size: 16px;
 }
 
-.btnHome:hover {
-  color: black;
-  border: 1px solid black;
+.btnHomeCreate:hover {
+  color: rgb(66, 66, 66);
+  border: 1px solid rgb(66, 66, 66);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .titleCreate {
   color: white;
   margin-bottom: 40px;
+  padding: 15px;
+  background-color: rgba(66, 66, 66, 0.94);
+  width: fit-content;
+  border-radius: 20px;
+  position: absolute;
+  top: 10%;
+  left: 18%;
 }
 
 .formContainer {
   display: flex;
   justify-content: center;
+  position: absolute;
+  top: 25%;
+  left: 18%;
 }
 
 .form {
@@ -45,20 +58,33 @@
   height: 400px;
   border: 1px solid white;
   border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.234);
+  /* background-color: rgba(0, 0, 0, 0.234); */
+  background-color: rgba(66, 66, 66, 0.94);
   padding: 20px;
 }
 
 .formData {
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 85%;
 }
 
-.columns {
+.column1, .column2, .column3 {
   display: flex;
   flex-direction: column;
   margin: 1px 10px;
+}
+
+.column1 {
+  width: 700px;
+}
+
+.column2 {
+  width: 400px;
+  padding-left: 20px;
+}
+
+.column3 {
   width: 500px;
 }
 
@@ -87,11 +113,11 @@ input {
 }
 
 .nameContainer {
-  height: 130px;
+  height: 110px;
 }
 
 .nameInput, .nameInputError {
-  width: 200px;
+  width: 300px;
   text-align: center;
   font-weight: bold;
 }
@@ -104,9 +130,13 @@ input {
   border: 3px solid orange;
 }
 
+.descContainer {
+  height: 190px;
+}
+
 .descArea, .descAreaError {
   height: 100px;
-  width: 200px;
+  width: 300px;
   border-radius: 4px;
   font-size: 14px;
 }
@@ -124,11 +154,12 @@ input {
 }
 
 .imageContainer {
-  height: 130px;
+  height: 100px;
 }
 
 .imgURL {
-  width: 200px;
+  width: 300px;
+  font-size: 14px;
 }
 
 .dateContainer {
@@ -176,7 +207,7 @@ select {
 }
 
 .dropContainer {
-  height: 180px;
+  height: 171px;
   margin-top: 25px;
 }
 
@@ -208,7 +239,7 @@ select {
 }
 
 .btnCreateContainer {
-  width: 20%;
+  width: 15%;
   display: flex;
   justify-content: center;
 }
