--- a/client/src/styles/Paginate.css
+++ b/client/src/styles/Paginate.css
@@ -3,9 +3,11 @@
   width: 75%;
   margin: 1em auto;
   text-align: center;
+  position: relative;
+  left: -3.2%;
 }
 
-.num, .numSelected {
+.num, .numSelected, .arrow {
   display: inline-block;
   padding: 5px 10px;
   border: 1px solid #e0e0e0;  
@@ -13,14 +15,24 @@
   transition: background 0.1s, color 0.1s;
   margin: 5px;
   border-radius: 8px;
+  /* font-weight: bold; */
 }
 
-.num {
+.num, .arrow {
   background-color: white;
   color: rgb(50, 50, 50);
 }
 
-.num:hover, .numSelected {
+.arrow {
+  font-size: 15px;
+  position: relative;
+  top: -1px
+  /* height: 18px; */
+  /* width: 5px; */
+  /* padding: 4px 5px; */
+}
+
+.num:hover, .numSelected, .arrow:hover {
   background-color: rgb(50, 50, 50);
   color: white;
 }
