--- a/client/src/styles/VideogameCard.css
+++ b/client/src/styles/VideogameCard.css
@@ -2,13 +2,14 @@
   border: 3px solid black;
   border-radius: 20px;
   margin: 20px 1px;
-  height: 480px;
+  height: 450px;
   width: 320px;
   /* display: flex;
   flex-direction: column; */
   /* justify-content: space-between; */
   align-items: center;
-  background-color: rgba(0, 128, 0, 0.466);
+  /* background-color: rgba(0, 128, 0, 0.466); */
+  background-color: rgba(0, 96, 0, 0.908);
 }
 
 .card:hover {
@@ -37,7 +38,8 @@
   padding: 16px;
   border-radius: 20px;
   width: 290px;
-  height: 290px;
+  height: 250px;
+  margin: 5px auto;
 }
 
 /* .cardImageContainer {
@@ -46,29 +48,47 @@
   width: 100%;
 } */
 
+.ratingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ratingImg {
+  width: 100px;
+  height: 21px;
+  margin-right: 10px;
+}
+
 .rating {
   /* padding: auto; */
-  margin: auto;
   color: white;
   width: fit-content;
   font-size: 18px;
   height: 30px;
   text-align: center;
+  vertical-align: middle;
+  position: relative;
+  top: 2px;
 }
 
 .genreContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* align-items: center; */
-  /* height: 60px; */
+  align-items: center;
+  height: 60px;
 }
 
 .genre {
   border-radius: 10px;
   border: 1px solid white;
   padding: 3px;
-  margin: 1px 2px;
+  margin: 2px;
   color: white;
   height: fit-content;
+}
+
+.noneAssigned {
+  color: white;
 }
