--- a/client/src/styles/VideogameCard.css
+++ b/client/src/styles/VideogameCard.css
@@ -62,9 +62,10 @@
 
 .rating {
   /* padding: auto; */
-  color: white;
+  color: rgb(232, 232, 16);
   width: fit-content;
   font-size: 18px;
+  font-weight: bold;
   height: 30px;
   text-align: center;
   vertical-align: middle;
@@ -82,10 +83,10 @@
 
 .genre {
   border-radius: 10px;
-  border: 1px solid white;
+  border: 1px solid rgb(84, 249, 255);
   padding: 3px;
   margin: 2px;
-  color: white;
+  color: rgb(84, 249, 255);
   height: fit-content;
 }
 
