--- a/client/src/styles/CreateVideogame.css
+++ b/client/src/styles/CreateVideogame.css
@@ -259,10 +259,9 @@ select {
   justify-content: center;
 }
 
-.btnCreateEnabled, .btnCreateDisabled {
+.btnCreateEnabled, .btnCreateDisabled, .btnUpdateEnabled, .btnUpdateDisabled {
   height: fit-content;
   font-size: 22px;
-  background-color: green;
   color: white;
   padding: 15px;
   border-radius: 10px;
@@ -271,17 +270,31 @@ select {
   position: relative;
 }
 
-.btnCreateEnabled {
+.btnCreateEnabled, .btnCreateDisabled {
+  background-color: green;
+}
+
+.btnUpdateEnabled, .btnUpdateDisabled {
+  background-color: rgb(0, 0, 200);
+}
+
+.btnCreateEnabled, .btnUpdateEnabled {
   cursor: pointer;
 }
 
 .btnCreateEnabled:hover {
   background-color: white;
-  border: 2px solid black;
+  border: 2px solid green;
   color: green;
 }
 
-.btnCreateDisabled {
+.btnUpdateEnabled:hover {
+  background-color: white;
+  border: 2px solid rgb(0, 0, 200);
+  color: rgb(0, 0, 200);
+}
+
+.btnCreateDisabled, .btnUpdateDisabled {
   opacity: 0.6;
   cursor: not-allowed;
 }
