--- a/client/src/styles/CreateVideogame.css
+++ b/client/src/styles/CreateVideogame.css
@@ -4,9 +4,15 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
-  height: auto;
-  min-height: 100vh;
+  /* overflow: hidden; */
+  overflow-y: scroll;
+  /* height: auto; */
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
 }
 
 .btnHomeCreate {
@@ -33,22 +39,24 @@
 
 .titleCreate {
   color: white;
-  margin-bottom: 40px;
+  margin: 50px;
   padding: 15px;
   background-color: rgba(66, 66, 66, 0.94);
   width: fit-content;
   border-radius: 20px;
-  position: absolute;
+  /* position: absolute;
   top: 12%;
-  left: 18%;
+  left: 18%; */
+  align-self: center;
 }
 
 .formContainer {
   display: flex;
   justify-content: center;
-  position: absolute;
+  /* position: absolute;
   top: 27%;
-  left: 18%;
+  left: 18%; */
+  align-self: center;
 }
 
 .form {
@@ -154,7 +162,7 @@ input {
 }
 
 .imageContainer {
-  height: 100px;
+  height: 120px;
 }
 
 .imgURL {
@@ -162,7 +170,7 @@ input {
   font-size: 14px;
 }
 
-.dateContainer {
+.dateContainer, .ratContainer {
   height: 130px;
 }
 
@@ -268,6 +276,7 @@ select {
   border: 2px solid white;
   top: 35%;
   position: relative;
+  margin-top: 20px;
 }
 
 .btnCreateEnabled, .btnCreateDisabled {
@@ -297,4 +306,67 @@ select {
 .btnCreateDisabled, .btnUpdateDisabled {
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+@media (max-width:1100px) {
+  .form {
+    width: 800px;
+  }
+  .column2 {
+    padding-left: 0px;
+  }
+  .nameInput, .nameInputError, .descArea, .descAreaError, .imgURL {
+    width: 200px;
+  }
+  .error {
+    font-size: 12px;
+  }
+}
+
+@media (max-width:900px) {
+  .form {
+    width: 600px;
+  }
+  .nameInput, .nameInputError, .descArea, .descAreaError, .imgURL {
+    width: 150px;
+  }
+  .dateInput, .dateInputError {
+    width: 80px;
+  }
+  select {
+    width: 120px;
+  }
+  .error {
+    font-size: 10px;
+  }
+}
+
+@media (max-width:700px) {
+  .form {
+    width: 280px;
+    height: fit-content;
+    flex-direction: column;
+  }
+  .formData {
+    flex-direction: column;
+    width: auto;
+  }
+  .column1, .column2, .column3 {
+    width: auto;
+  }
+  .nameInput, .nameInputError, .descArea, .descAreaError, .imgURL {
+    width: 250px;
+  }
+  .dateInput, .dateInputError {
+    width: 100px;
+  }
+  .dateContainer, .ratContainer {
+    height: 110px;
+  }
+  .btnCreateContainer {
+    width: auto;
+  }
+  .error {
+    font-size: 12px;
+  }
 }
