--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -19,6 +19,7 @@
   top: 0px;
   border-right: 3px solid black;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .mainButtons::-webkit-scrollbar {
@@ -237,7 +238,7 @@ a, a:link, a:visited, a:hover, a:focus, a:active {
 
 @media (max-width:700px) {
   .dropdown, .dropdownSel {
-    width: 90px;
+    width: 80px;
     font-size: 10px;
   }
   .btnCreate {
@@ -261,7 +262,7 @@ a, a:link, a:visited, a:hover, a:focus, a:active {
     width: 200px;
   }
   .selected, .btnErase {
-    font-size: 10px;
+    font-size: 8px;
   }
 }
 
