--- a/client/src/styles/VideogameCard.css
+++ b/client/src/styles/VideogameCard.css
@@ -35,7 +35,7 @@
 }
 
 .cardImage {
-  background-color: rgba(0, 0, 0, 0.242);
+  /* background-color: rgba(0, 0, 0, 0.242); */
   padding: 16px;
   border-radius: 20px;
   width: 290px;
